--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,9 @@
 language: php
-
-matrix:
-  include:
-    - php: 7.2
-      env: CORCEL='^4.0'
-    - php: 7.3
-      env: CORCEL='^4.0'
-    - php: 7.3
-      env: CORCEL='^5.0'
-    - php: 7.4
-      env: CORCEL='^4.0'
-    - php: 7.4
-      env: CORCEL='^5.0'
-
+php:
+  - '7.2'
+  - '7.3'
 dist: trusty
-
+sudo: required
 addons:
   apt:
     packages:
@@ -22,20 +11,13 @@ addons:
     - mysql-server-5.6
     - mysql-client-core-5.6
     - mysql-client-5.6
-
-before_script:
+before_install:
   - unzip tests/config/database.sql.zip -d tests/config/
   - mysql -u root -e "create database corcel_acf;"
   - mysql -u root corcel_acf < tests/config/database.sql
-
-before_install:
-  - rm composer.lock
+before_script:
   - composer self-update
-  - composer require jgrossi/corcel:$CORCEL --no-interaction --no-update
-
-install:
-  - composer install --prefer-dist --no-interaction --no-suggest
-
+  - composer install
 script:
   - mkdir -p build/logs
   - ./vendor/bin/phpunit
