--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.2",
-    "jgrossi/corcel": "^2.0 || ^3.0"
+    "jgrossi/corcel": "dev-l6 || ^2.0 || ^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0"
